# benfords_law_checker

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: cli.rs  error.rs  graph.rs  lib.rs  logger.rs  main.rs
src/checker/: error.rs  graph.rs  mod.rs
tests/: cli.rs
