[package]
name = "benfords_law_checker"
version = "0.1.0"
authors = ["ASzwarc <szwarc.adam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.4"
log = "0.4.11"
env_logger = "0.8.1"
chrono = "0.4"
structopt = "0.3"
thiserror = "1"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
tempfile = "3"
